use toList() in streams